Add a class for wrapping imgui

--- a/src/common/graphics/OpenGL/examples/Makefile
+++ b/src/common/graphics/OpenGL/examples/Makefile
@@ -46,7 +46,7 @@ endif
 OBJ_UTILS    = Exception.o PendingData.o ILogger.o Logger.o
 OBJ_OPENGL   = OpenGLException.o OpenGL.o GLObject.o GLShader.o         \
                GLVertexArray.o GLVertexBuffer.o GLAttrib.o GLTextures.o \
-               GLWindow.o
+               GLWindow.o GLImGUI.o
 IMGUI        = imgui_draw.o imgui_widgets.o imgui.o imgui_impl_glfw.o imgui_impl_opengl3.o
 OBJ          = $(OBJ_EXTERNAL) $(OBJ_TOOL) $(OBJ_UTILS) $(OBJ_OPENGL) $(IMGUI) \
                Example01.o Example02.o Example03.o Example04.o Example05.o Example06.o main.o
