--- a/src/common/graphics/OpenGL/examples/Makefile
+++ b/src/common/graphics/OpenGL/examples/Makefile
@@ -43,7 +43,7 @@ OBJ_EXTERNAL   = backward.o
 else
 OBJ_EXTERNAL   =
 endif
-OBJ_UTILS    = Exception.o PendingData.o ILogger.o Logger.o
+OBJ_UTILS    = Exception.o GLException.o PendingData.o ILogger.o Logger.o
 OBJ_OPENGL   = OpenGL.o GLWindow.o
 IMGUI        = imgui_draw.o imgui_widgets.o imgui.o imgui_impl_glfw.o imgui_impl_opengl3.o
 OBJ          = $(OBJ_EXTERNAL) $(OBJ_TOOL) $(OBJ_UTILS) $(OBJ_OPENGL) $(IMGUI) \
