Add common Makefile, fix compilation of standalone examples

--- a/src/common/graphics/OpenGL/examples/Makefile
+++ b/src/common/graphics/OpenGL/examples/Makefile
@@ -24,111 +24,37 @@ PROJECT = OpenGLExamples
 TARGET = $(PROJECT)
 
 ###################################################
+# Debug mode or Release mode
+PROJECT_MODE = debug
+
+###################################################
 # Location from the project root directory.
 P=../../../../..
 
 ###################################################
 # Sharable informations between all Makefiles
 M=$(P)/.makefile
--include $(M)/Makefile.header
-
-###################################################
-# Debug mode or Release mode
-PROJECT_MODE = debug
+include $(M)/Makefile.header
+include $(P)/Makefile.common
 
 ###################################################
 # List of files to compile. Splited by directories
-ifeq ($(PROJECT_MODE),debug)
-OBJ_EXTERNAL   = backward.o
-else
-OBJ_EXTERNAL   =
-endif
 OBJ_UTILS    = Exception.o File.o GLException.o PendingData.o ILogger.o Logger.o
 OBJ_OPENGL   = OpenGL.o GLWindow.o
 IMGUI        = imgui_draw.o imgui_widgets.o imgui.o imgui_impl_glfw.o imgui_impl_opengl3.o
-OBJ          = $(OBJ_EXTERNAL) $(OBJ_TOOL) $(OBJ_UTILS) $(OBJ_OPENGL) $(IMGUI) \
+OBJ         += $(OBJ_EXTERNAL) $(OBJ_TOOL) $(OBJ_UTILS) $(OBJ_OPENGL) $(IMGUI) \
                Example01.o Example02.o Example03.o main.o
-
-###################################################
-# Compilation options.
-CXXFLAGS = -W -Wall -Wextra -O0 -g -std=c++11 `pkg-config --cflags gtkmm-3.0 gtksourceviewmm-3.0`
-LDFLAGS = `pkg-config --libs gtkmm-3.0 gtksourceviewmm-3.0`
-
-###################################################
-#
-INCLUDES += -I$(P)/src -I$(P)/external/imgui
-VPATH += $(P)/src:$(P)/external/imgui
-
-###################################################
-# Project defines
-DEFINES += -DCHECK_OPENGL
-# Disable ugly gtkmm compilation warnings
-DEFINES += -DGTK_SOURCE_H_INSIDE -DGTK_SOURCE_COMPILATION
-DEFINES += -DIMGUI_IMPL_OPENGL_LOADER_GLEW
 
 ###################################################
 # Set Libraries compiled in the external/ directory.
 # For knowing which libraries is needed please read
 # the doc/Install.md file.
-LIBS = $(abspath $(P)/external/SOIL/libSOIL.a)
+EXTERNAL_LIBS += $(abspath $(P)/external/SOIL/libSOIL.a)
 
 ###################################################
-# Set Libraries. For knowing which libraries
-# is needed please read the external/README.md file.
-
-## OS X
-ifeq ($(ARCHI),Darwin)
-LIBS += -L/usr/local/lib -framework OpenGL -lGLEW -lglfw
-
-## Linux
-else ifeq ($(ARCHI),Linux)
-LIBS += -lGL -lglut -lm -lglib-2.0 -lpangocairo-1.0 -latk-1.0		\
--lgdk_pixbuf-2.0 -lpango-1.0 -lgmodule-2.0 -lgobject-2.0		\
--lgthread-2.0 -lcairo -lXrandr -lXi -lXxf86vm -pthread -lX11 -lGLEW	\
--ldl -lglfw -lstdc++
-
-## Windows
-else
-
-$(error Unknown architecture)
-endif
-
-###################################################
-# Backward allows tracing stack when segfault happens
-ifeq ($(PROJECT_MODE),debug)
-ifneq ($(ARCHI),Darwin)
-OPTIM_FLAGS = -O2 -g
-DEFINES += -DBACKWARD_HAS_DW=1
-LIBS += -ldw
-endif
-else
-OPTIM_FLAGS = -O3
-endif
-
-###################################################
-#
+# Compile OpenGL examples
 all: $(TARGET)
 
 ###################################################
-# Link sources
-$(TARGET): $(OBJ)
-	@$(call print-to,"Linking","$(TARGET)","$(BUILD)/$@","$(VERSION)")
-	@cd $(BUILD) && $(CXX) $(OBJ) -o $(TARGET) $(LIBS) $(LDFLAGS)
-
-###################################################
-# Compile sources
-%.o: %.cpp $(BUILD)/%.d Makefile $(M)/Makefile.header $(M)/Makefile.footer version.h
-	@$(call print-from,"Compiling C++","$(TARGET)","$<")
-	@$(CXX) $(DEPFLAGS) $(OPTIM_FLAGS) $(CXXFLAGS) $(DEFINES) $(INCLUDES) -c $(abspath $<) -o $(abspath $(BUILD)/$@)
-	@$(POSTCOMPILE)
-
-###################################################
-.PHONY: clean
-clean:
-	@$(call print-simple,"Cleaning","$(PWD)")
-	@rm -fr *~ $(BUILD) 2> /dev/null
-
-###################################################
 # Sharable informations between all Makefiles
-include $(M)/Makefile.help
 include $(M)/Makefile.footer
